--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@types/styled-theming": "^2.2.5",
+    "gray-matter": "^4.0.3",
+    "micromark": "^3.0.10",
+    "micromark-extension-frontmatter": "^1.0.0",
+    "micromark-extension-gfm": "^2.0.1",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
