--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@mdx-js/mdx": "^2.1.1",
+    "@next/mdx": "^12.1.5",
+    "@types/mdx": "^2.0.1",
     "@types/styled-theming": "^2.2.5",
     "gray-matter": "^4.0.3",
-    "micromark": "^3.0.10",
-    "micromark-extension-frontmatter": "^1.0.0",
-    "micromark-extension-gfm": "^2.0.1",
     "next": "12.1.4",
+    "next-mdx-remote": "^4.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "sharp": "^0.30.3",
