--- a/package.json
+++ b/package.json
@@ -9,31 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
-    "@mdx-js/mdx": "^2.1.1",
-    "@next/mdx": "^12.1.5",
-    "gray-matter": "^4.0.3",
-    "next": "12.1.4",
-    "next-mdx-remote": "^4.0.1",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "rehype-highlight": "^5.0.2",
-    "sharp": "^0.30.3",
-    "styled-components": "^5.3.5",
-    "styled-theming": "^2.2.0"
+    "@fortawesome/fontawesome-svg-core": "latest",
+    "@fortawesome/free-brands-svg-icons": "latest",
+    "@fortawesome/free-solid-svg-icons": "latest",
+    "@fortawesome/react-fontawesome": "latest",
+    "@mdx-js/mdx": "latest",
+    "@next/mdx": "latest",
+    "gray-matter": "latest",
+    "next": "latest",
+    "next-mdx-remote": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "rehype-highlight": "latest",
+    "sharp": "latest",
+    "styled-components": "latest",
+    "styled-theming": "latest"
   },
   "devDependencies": {
-    "@types/mdx": "^2.0.1",
-    "@types/node": "17.0.23",
-    "@types/react": "17.0.43",
-    "@types/react-dom": "17.0.14",
-    "@types/styled-components": "^5.1.24",
-    "@types/styled-theming": "^2.2.5",
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4",
-    "typescript": "4.6.3"
+    "@types/mdx": "latest",
+    "@types/node": "latest",
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
+    "@types/styled-components": "latest",
+    "@types/styled-theming": "latest",
+    "eslint": "latest",
+    "eslint-config-next": "latest",
+    "typescript": "latest"
   }
 }
